--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -1,5 +1,7 @@
 New = "New";
 Create = "Create and build\na new Website";
+New.website = "New Website";
+Enter.name = "Name your new Website (optional)";
 
 Ari = "Ari";
 Open = "Open";
