--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -3,7 +3,10 @@ Create = "Create and build\na new Website";
 New.website = "New Website";
 Enter.name = "Name your new Website (optional)";
 Enter.type = "Select a type";
+Enter.location = "Select a destination";
 Website.name = "Website name";
+Select.folder = "Select folder";
+None.selected = "None selected";
 
 Ari = "Ari";
 Open = "Open";
