--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -7,6 +7,7 @@ Enter.location = "Select a destination";
 Website.name = "Website name";
 Select.folder = "Select folder";
 None.selected = "None selected";
+Website.ready = "Your new Website is ready!";
 
 Ari = "Ari";
 Open = "Open";
