--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -9,6 +9,7 @@ Select.folder = "Select folder";
 None.selected = "None selected";
 Website.ready = "Your new Website is ready!";
 Edit = "Edit";
+Style = "Style";
 Export = "Export";
 Preview = "Preview";
 
