Make popover a publisher

--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -19,6 +19,7 @@ Secondary.description = "Links and buttons";
 Link.header = "Add link";
 Link.title = "Title (optional)";
 Link.url = "URL";
+Link.placeholder = "https://";
 
 App = "App";
 Open = "Open";
