--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -28,6 +28,14 @@ Hide = "Hide";
 Hide.others = "Hide Others";
 Show.all = "Show All";
 Quit = "Quit";
+Edit = "Edit";
+Undo = "Undo";
+Redo = "Redo";
+Cut = "Cut";
+Copy = "Copy";
+Paste = "Paste";
+Delete = "Delete";
+Select.all = "Select All";
 Window = "Window";
 Minimize = "Minimize";
 Zoom = "Zoom";
