--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -21,6 +21,7 @@ Link.title = "Title (optional)";
 Link.url = "URL";
 Link.placeholder = "https://";
 Image.header = "Add image";
+Image.title = "Select image";
 
 App = "App";
 Open = "Open";
