--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -23,6 +23,7 @@ Add.image = "Add image";
 Duplicate = "Copy file to project's directory";
 Edit.original = "This will overwrite the original image";
 Image.alt = "Alternative text";
+In.app = "In-App Purchase";
 
 App = "App";
 Open = "Open";
