--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -44,6 +44,8 @@ Copy = "Copy";
 Paste = "Paste";
 Delete = "Delete";
 Select.all = "Select All";
+Store = "Store";
+In.apps = "In-App Purchases";
 Window = "Window";
 Minimize = "Minimize";
 Zoom = "Zoom";
