--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -28,6 +28,8 @@ Restore.purchases = "Restore Purchases";
 Purchases.are = "Purchases are non-consumable, you pay for them only once.\nThey are shared between iOS and macOS.";
 Loading = "Loading";
 Purchase = "Purchase";
+ari.app.blog.title = "Blog";
+ari.app.blog.subtitle = "This In-App Purchase enables creating a Blog.\n\nBlogs are static websites that allows you to add multiple entries and constantly add new content.";
 
 App = "App";
 Open = "Open";
