--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -2,8 +2,8 @@ New = "New";
 Create = "Create and build\na new Website";
 New.website = "New Website";
 Enter.name = "Name your new Website (optional)";
-Enter.type = "Select a type";
-Enter.location = "Select a destination";
+Enter.type = "Choose a type";
+Enter.location = "Folder destination";
 Website.name = "Website name";
 Select.folder = "Select folder";
 None.selected = "None selected";
@@ -29,7 +29,7 @@ Purchases.are = "Purchases are non-consumable, you pay for them only once.\nThey
 Loading = "Loading";
 Purchase = "Purchase";
 ari.app.blog.title = "Blog";
-ari.app.blog.subtitle = "This In-App Purchase enables creating a Blog.\n\nBlogs are static websites that allows you to add multiple entries and constantly add new content.";
+ari.app.blog.subtitle = "This In-App Purchase enables creating a Blog.\n\nBlogs are static websites that allows you to add multiple entries and constantly update with new content.";
 
 App = "App";
 Open = "Open";
