--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 New = "New";
-Create = "Create and build\na new Website";
+Create = "Create and build a new Website";
 New.website = "New Website";
 Enter.name = "Name your new Website (optional)";
 Enter.type = "Choose a type";
