Update imagesUpdate images

--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -6,7 +6,7 @@ Enter.type = "Choose a type";
 Enter.location = "Folder destination";
 Website.name = "Website name";
 Select.folder = "Select folder";
-None.selected = "None selected";
+Save = "Save";
 Edit = "Edit";
 Style = "Style";
 Export = "Export";
@@ -22,7 +22,7 @@ Link.placeholder = "https://";
 Add.image = "Add image";
 Duplicate = "Copy file to project's directory";
 Edit.original = "This will overwrite the original image";
-Image.alt = "Alternative text";
+Image.alt = "Alternate text";
 In.app = "In-App Purchase";
 Restore.purchases = "Restore Purchases";
 Purchases.are = "Purchases are non-consumable, you pay for them only once.\nThey are shared between iOS and macOS.";
