Update page info

--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -33,6 +33,10 @@ Cant.undo = "This can't be undone";
 Delete.page = "Delete page";
 Cancel = "Cancel";
 Title = "Title";
+Description = "Description";
+Keywords = "Keywords";
+Author = "Author";
+Page.details = "Page details";
 
 ari.app.blog.title = "Blog";
 ari.app.blog.subtitle = "This In-App Purchase enables creating a Blog.\n\nBlogs are static website that you can constantly update with fresh content or add new entries.";
