--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -37,6 +37,7 @@ Description = "Description";
 Keywords = "Keywords";
 Author = "Author";
 Page.details = "Page details";
+How.it.works = "How does it work?";
 
 ari.app.blog.title = "Blog";
 ari.app.blog.subtitle = "This In-App Purchase enables creating a Blog.\n\nBlogs are static website that you can constantly update with fresh content or add new entries.";
