Add keyboard dismiss

--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -37,7 +37,7 @@ Description = "Description";
 Keywords = "Keywords";
 Author = "Author";
 Page.details = "Page details";
-Bookmark.error.title = "Error accessing this folder";
+Bookmark.error.title = "Error loading this folder";
 Bookmark.error.message = "Check that it is a valid destination and try again";
 Continue = "Continue";
 Home = "Home";
