--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -45,8 +45,8 @@ Home = "Home";
 Appearance = "Appearance";
 Colours = "Colours";
 Pages = "Pages";
-Share.project = "Share.project";
-Share.folder = "Share.folder";
+Share.project = "Share project";
+Share.folder = "Share folder";
 
 How.it.works = "How does it work?";
 How.single = "- You have 1 page where you can keep things simple and easy to modify.
